# aigent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  todo.txt
aigent/: __init__.py  __main__.py
